// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders correctly with default props 1`] = `
<img
  alt="photos alexander dummer 150646"
  className="img"
  sizes="100vw"
  src="https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
  srcSet="
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=1025&h=1025&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 1026w,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=768&h=768&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 769w,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=320&h=320&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 321w
"
  title="photos alexander dummer 150646"
/>
`;

exports[`<Img /> renders correctly with given imgix picture source props 1`] = `
<picture
  className={undefined}
>
  <source
    media="(max-width: 767px)"
    srcSet="https://policygenius-images.imgix.net/small?w=767&h=768&fit=clip&auto=format&auto=compress"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="https://policygenius-images.imgix.net/medium?w=1024&h=768&fit=clip&auto=format&auto=compress"
  />
  <img
    alt="default"
    className="img"
    desktopImgixSrc="large"
    src="https://policygenius-images.imgix.net/default?w=768&h=768&fit=clip&auto=format&auto=compress"
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given imgix props 1`] = `
<img
  alt="photos are cool"
  className="img cool-class"
  sizes="100vw"
  src="https://policygenius-images.imgix.net/photos/are-cool.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
  srcSet="
  https://policygenius-images.imgix.net/photos/are-cool.jpg?w=10&h=20&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 1026w,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?w=10&h=20&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 769w,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?w=10&h=20&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 321w
"
  title="photos are cool"
/>
`;

exports[`<Img /> renders correctly with given regular picture source props 1`] = `
<picture
  className={undefined}
>
  <source
    media="(max-width: 767px)"
    srcSet="small"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="medium"
  />
  <img
    alt="default"
    className="img"
    desktopSrc="large"
    src="default"
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given regular props 1`] = `
<img
  alt="alt"
  className="img cool-class"
  sizes="100vw"
  src="some-url"
  srcSet="some-url"
  title="title"
/>
`;
